fixed spacing for side bar items and made icon larger

--- a/src/styles/MobileNav.css
+++ b/src/styles/MobileNav.css
@@ -3,16 +3,14 @@ body {
 }
 #menubar{
   background-color:white;
-  position: absolute;
+  position: fixed;
   right: 0;
   float: right;
   align-items:flex-end;
-  margin:0;
-  border:0;
-  padding:0;
+  padding-top: 20px;
   height:100vh;
-  width: 187px;
-  z-index: 100;
+  width: 210px;
+  z-index: 200;
   /* display: none; */
 }
 .menu-items-holder {
@@ -21,29 +19,30 @@ body {
   right: 0;
 }
 .hamburger-icon {
-  position: fixed;
+  position: absolute;
   right: 0;
   /* fill: black; */
   font-size: 50px;
-  width: 19.13px;
-  height: 16.36px;
+  width: 30px;
+  height: 25.656px;
   float: right;
   padding-right: 20px;
-  z-index: 200;
+  z-index: 201;
 }
 #hamburger-icon {
   fill: #D3CEC7;
 }
 .menubar-text{
   color: black;
-  padding-top: 20px;
-  padding-right: 20px;
+  padding: 20px;
   font-family: 'Inter', sans-serif;
-  font-size: 20;
+  font-size: 20px;
   text-align: right;
 }
 .hide {
   /* display:block; */
   display: none;
 }
-
+.fixed {
+  position: fixed;
+}
